--- a/index.html
+++ b/index.html
@@ -33,10 +33,8 @@
 <body class="min-h-screen text-white" style="background-color: #8C8CCF;">
   <div class="flex min-h-screen">
     <!-- Sidebar -->
-    <aside class="w-20 text-white flex flex-col py-6 space-y-6 fixed top-0 left-0 h-full z-40 justify-start" style="background-color: #1F395C;">
-      <div class="text-center font-bold text-lg mb-16">☰</div>
-
-      <div class="flex flex-col space-y-6 mt-20">
+    <aside class="w-20 text-white flex flex-col py-6 space-y-6 fixed top-0 left-0 h-full z-40 justify-between" style="background-color: #1F395C;">
+      <div class="flex flex-col space-y-6 mt-32">
         <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative">
           <i data-feather="home"></i>
           <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-white">Home</span>
@@ -59,7 +57,7 @@
         </div>
       </div>
 
-      <div class="mt-auto group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative mb-4" onclick="openSettings()">
+      <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative mb-6" onclick="openSettings()">
         <i data-feather="settings"></i>
         <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-white">Settings</span>
       </div>
