--- a/index.html
+++ b/index.html
@@ -34,29 +34,38 @@
   <div class="flex min-h-screen">
     <!-- Sidebar -->
     <aside class="w-20 text-white flex flex-col py-6 space-y-6 fixed top-0 left-0 h-full z-40 justify-between" style="background-color: #1F395C;">
-      <div class="flex flex-col space-y-6 mt-32">
-        <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative">
-          <i data-feather="home"></i>
-          <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-white">Home</span>
+      <div>
+        <!-- Sidebar Header (Menu Icon) -->
+        <div class="flex justify-center items-center mb-4">
+          <i data-feather="menu" class="cursor-pointer"></i>
         </div>
-        <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative">
-          <i data-feather="zap"></i>
-          <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-white">Apps</span>
-        </div>
-        <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative">
-          <i data-feather="users"></i>
-          <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-white">Team</span>
-        </div>
-        <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative">
-          <i data-feather="bar-chart-2"></i>
-          <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-white">Stats</span>
-        </div>
-        <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative">
-          <i data-feather="book-open"></i>
-          <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-white">Docs</span>
+
+        <!-- Main Icons -->
+        <div class="flex flex-col space-y-6 mt-24">
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative">
+            <i data-feather="home"></i>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-white">Home</span>
+          </div>
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative">
+            <i data-feather="zap"></i>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-white">Apps</span>
+          </div>
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative">
+            <i data-feather="users"></i>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-white">Team</span>
+          </div>
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative">
+            <i data-feather="bar-chart-2"></i>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-white">Stats</span>
+          </div>
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative">
+            <i data-feather="book-open"></i>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-white">Docs</span>
+          </div>
         </div>
       </div>
 
+      <!-- Settings Icon -->
       <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative mb-6" onclick="openSettings()">
         <i data-feather="settings"></i>
         <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-white">Settings</span>
