--- a/index.html
+++ b/index.html
@@ -41,26 +41,26 @@
         </div>
 
         <!-- Main Icons -->
-        <div class="flex flex-col space-y-6 mt-48">
+        <div class="flex flex-col space-y-6 mt-64">
           <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative">
             <i data-feather="home"></i>
-            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-white">Home</span>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-yellow-300">Home</span>
           </div>
           <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative">
             <i data-feather="zap"></i>
-            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-white">Apps</span>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-yellow-300">Apps</span>
           </div>
           <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative">
             <i data-feather="users"></i>
-            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-white">Team</span>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-yellow-300">Team</span>
           </div>
           <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative">
             <i data-feather="bar-chart-2"></i>
-            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-white">Stats</span>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-yellow-300">Stats</span>
           </div>
           <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative">
             <i data-feather="book-open"></i>
-            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-white">Docs</span>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-yellow-300">Docs</span>
           </div>
         </div>
       </div>
@@ -68,7 +68,7 @@
       <!-- Settings Icon -->
       <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative mb-6" onclick="openSettings()">
         <i data-feather="settings"></i>
-        <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-white">Settings</span>
+        <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-yellow-300">Settings</span>
       </div>
     </aside>
 
