--- a/index.html
+++ b/index.html
@@ -42,33 +42,33 @@
 
         <!-- Main Icons -->
         <div class="flex flex-col space-y-6 mt-64">
-          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative">
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black relative">
             <i data-feather="home"></i>
-            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-yellow-300">Home</span>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black">Home</span>
           </div>
-          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative">
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black relative">
             <i data-feather="zap"></i>
-            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-yellow-300">Apps</span>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black">Apps</span>
           </div>
-          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative">
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black relative">
             <i data-feather="users"></i>
-            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-yellow-300">Team</span>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black">Team</span>
           </div>
-          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative">
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black relative">
             <i data-feather="bar-chart-2"></i>
-            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-yellow-300">Stats</span>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black">Stats</span>
           </div>
-          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative">
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black relative">
             <i data-feather="book-open"></i>
-            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-yellow-300">Docs</span>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black">Docs</span>
           </div>
         </div>
       </div>
 
       <!-- Settings Icon -->
-      <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative mb-6" onclick="openSettings()">
+      <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black relative mb-6" onclick="openSettings()">
         <i data-feather="settings"></i>
-        <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-yellow-300">Settings</span>
+        <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black">Settings</span>
       </div>
     </aside>
 
