--- a/index.html
+++ b/index.html
@@ -41,34 +41,34 @@
         </div>
 
         <!-- Main Icons -->
-        <div class="flex flex-col space-y-6 mt-64">
-          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black relative">
+        <div class="flex flex-col space-y-6 mt-72">
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
             <i data-feather="home"></i>
-            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black">Home</span>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Home</span>
           </div>
-          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black relative">
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
             <i data-feather="zap"></i>
-            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black">Apps</span>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Apps</span>
           </div>
-          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black relative">
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
             <i data-feather="users"></i>
-            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black">Team</span>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Team</span>
           </div>
-          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black relative">
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
             <i data-feather="bar-chart-2"></i>
-            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black">Stats</span>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Stats</span>
           </div>
-          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black relative">
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
             <i data-feather="book-open"></i>
-            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black">Docs</span>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Docs</span>
           </div>
         </div>
       </div>
 
       <!-- Settings Icon -->
-      <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black relative mb-6" onclick="openSettings()">
+      <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative mb-6" onclick="openSettings()">
         <i data-feather="settings"></i>
-        <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black">Settings</span>
+        <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Settings</span>
       </div>
     </aside>
 
