--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
           <option value="en">English</option>
           <option value="es">Spanish</option>
           <option value="fr">French</option>
+          <option value="de">German</option>
+          <option value="it">Italian</option>
+          <option value="pt">Portuguese</option>
+          <option value="ru">Russian</option>
+          <option value="zh">Chinese</option>
+          <option value="ja">Japanese</option>
+          <option value="ko">Korean</option>
+          <option value="ar">Arabic</option>
+          <option value="hi">Hindi</option>
         </select>
       </label>
       <div class="flex justify-end">
@@ -154,6 +163,15 @@
           <option value="en">English</option>
           <option value="es">Spanish</option>
           <option value="fr">French</option>
+          <option value="de">German</option>
+          <option value="it">Italian</option>
+          <option value="pt">Portuguese</option>
+          <option value="ru">Russian</option>
+          <option value="zh">Chinese</option>
+          <option value="ja">Japanese</option>
+          <option value="ko">Korean</option>
+          <option value="ar">Arabic</option>
+          <option value="hi">Hindi</option>
         </select>
       </label>
       <div class="flex justify-end space-x-4">
