--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>More actions
 <html lang="en">
 
 <head>
@@ -45,7 +45,7 @@
   </script>
 </head>
 
-<body class="min-h-screen text-white bg-[#8C8CCF]">
+<body class="min-h-screen text-white" style="background-color: #8C8CCF;">
   <!-- Welcome Modal -->
   <div id="welcome-modal" class="hidden fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center z-50">
     <div class="bg-white text-black p-8 rounded-xl w-96 space-y-6">
@@ -86,7 +86,7 @@
         </div>
 
         <!-- Main Icons -->
-        <div class="flex flex-col space-y-6 mt-[580px]">
+        <div class="flex flex-col space-y-6 mt-96">
           <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
             <i data-feather="home"></i>
             <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Home</span>
@@ -118,7 +118,7 @@
     </aside>
 
     <!-- Main Content -->
-    <main class="flex-grow p-10 pl-32 bg-[#8C8CCF]">
+    <main class="flex-grow p-10 pl-32" style="background-color: #8C8CCF;">
       <h1 class="text-4xl font-bold text-center mb-2">East-West AI Platform</h1>
       <p id="workspace-title" class="text-center text-gray-300 mb-12">My AI Workspace</p>
 
