--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>More actions
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -86,7 +86,7 @@
         </div>
 
         <!-- Main Icons -->
-        <div class="flex flex-col space-y-6 mt-96">
+        <div class="flex flex-col space-y-6 mt-80">
           <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
             <i data-feather="home"></i>
             <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Home</span>
