--- a/index.html
+++ b/index.html
@@ -41,6 +41,39 @@
         localStorage.setItem('language', lang);
         location.reload();
       }
+      const translations = {
+  en: {
+    welcomeTitle: "Welcome to East-West AI",
+    yourName: "Your Name:",
+    language: "Language:",
+    continue: "Continue",
+    settings: "Settings",
+    backgroundTheme: "Background Theme:",
+    save: "Save",
+    cancel: "Cancel"
+  },
+  es: {
+    welcomeTitle: "Bienvenido a East-West AI",
+    yourName: "Tu nombre:",
+    language: "Idioma:",
+    continue: "Continuar",
+    settings: "Configuraciones",
+    backgroundTheme: "Tema de fondo:",
+    save: "Guardar",
+    cancel: "Cancelar"
+  },
+  fr: {
+    welcomeTitle: "Bienvenue sur East-West AI",
+    yourName: "Votre nom:",
+    language: "Langue:",
+    continue: "Continuer",
+    settings: "Paramètres",
+    backgroundTheme: "Thème d’arrière-plan:",
+    save: "Sauvegarder",
+    cancel: "Annuler"
+  },
+  // Add more translations as needed...
+};
     }
   </script>
 </head>
