--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <script src="https://unpkg.com/feather-icons"></script>
   <script>
+    function t(key) {
+  const lang = localStorage.getItem('language') || 'en';
+  return translations[lang]?.[key] || translations['en'][key] || key;
+}
     function openSettings() {
       document.getElementById('settings-panel').classList.remove('hidden');
     }
@@ -79,36 +83,40 @@
 </head>
 
 <body class="min-h-screen text-white" style="background-color: #8C8CCF;">
-  <!-- Welcome Modal -->
-  <div id="welcome-modal" class="hidden fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center z-50">
-    <div class="bg-white text-black p-8 rounded-xl w-96 space-y-6">
-      <h2 class="text-2xl font-bold">Welcome to East-West AI</h2>
-      <label class="block">Your Name:
-        <input id="welcome-name" class="w-full border p-2 rounded mt-1" placeholder="e.g. Stephen's Workspace">
-      </label>
-      <label class="block">Language:
-        <select id="welcome-language" class="w-full border p-2 rounded mt-1">
-          <option value="">Select Language</option>
-          <option value="en">English</option>
-          <option value="es">Spanish</option>
-          <option value="fr">French</option>
-          <option value="de">German</option>
-          <option value="it">Italian</option>
-          <option value="pt">Portuguese</option>
-          <option value="ru">Russian</option>
-          <option value="zh">Chinese</option>
-          <option value="ja">Japanese</option>
-          <option value="ko">Korean</option>
-          <option value="ar">Arabic</option>
-          <option value="hi">Hindi</option>
-        </select>
-      </label>
-      <div class="flex justify-end">
-        <button onclick="saveWelcomeSettings()" class="px-4 py-2 bg-violet-600 text-white rounded hover:bg-violet-700">Continue</button>
-      </div>
+ <!-- Welcome Modal -->
+<div id="welcome-modal" class="hidden fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center z-50">
+  <div class="bg-white text-black p-8 rounded-xl w-96 space-y-6">
+    <h2 id="welcome-title" class="text-2xl font-bold">Welcome to East-West AI</h2>
+
+    <label class="block" for="welcome-name" id="label-your-name">
+      Your Name:
+      <input id="welcome-name" class="w-full border p-2 rounded mt-1" placeholder="e.g. Stephen's Workspace">
+    </label>
+
+    <label class="block" for="welcome-language" id="label-language">
+      Language:
+      <select id="welcome-language" class="w-full border p-2 rounded mt-1">
+        <option value="">Select Language</option>
+        <option value="en">English</option>
+        <option value="es">Spanish</option>
+        <option value="fr">French</option>
+        <option value="de">German</option>
+        <option value="it">Italian</option>
+        <option value="pt">Portuguese</option>
+        <option value="ru">Russian</option>
+        <option value="zh">Chinese</option>
+        <option value="ja">Japanese</option>
+        <option value="ko">Korean</option>
+        <option value="ar">Arabic</option>
+        <option value="hi">Hindi</option>
+      </select>
+    </label>
+
+    <div class="flex justify-end">
+      <button id="welcome-continue" onclick="saveWelcomeSettings()" class="px-4 py-2 bg-violet-600 text-white rounded hover:bg-violet-700">Continue</button>
     </div>
   </div>
-
+</div>
   <div class="flex min-h-screen">
     <!-- Sidebar -->
     <aside class="w-20 text-white flex flex-col py-6 space-y-6 fixed top-0 left-0 h-full z-40 justify-between" style="background-color: #1F395C;">
