--- a/index.html
+++ b/index.html
@@ -127,5 +127,111 @@
       </div>
     </div>
   </div>
+  <div class="flex min-h-screen">
+    <!-- Sidebar -->
+    <aside class="w-20 text-white flex flex-col py-6 space-y-6 fixed top-0 left-0 h-full z-40 justify-between" style="background-color: #1F395C;">
+      <div>
+        <!-- Sidebar Header (Menu Icon) -->
+        <div class="flex justify-center items-center mb-4">
+          <i data-feather="menu" class="cursor-pointer"></i>
+        </div>
 
-  <!-- Remaining content unchanged -->
+        <!-- Main Icons -->
+        <div class="flex flex-col space-y-6 mt-96">
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
+            <i data-feather="home"></i>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Home</span>
+          </div>
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
+            <i data-feather="zap"></i>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Apps</span>
+          </div>
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
+            <i data-feather="users"></i>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Team</span>
+          </div>
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
+            <i data-feather="bar-chart-2"></i>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Stats</span>
+          </div>
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
+            <i data-feather="book-open"></i>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Docs</span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Settings Icon -->
+      <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative mb-6" onclick="openSettings()">
+        <i data-feather="settings"></i>
+        <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Settings</span>
+      </div>
+    </aside>
+
+    <!-- Main Content -->
+    <main class="flex-grow p-10 pl-32" style="background-color: #8C8CCF;">
+      <h1 class="text-4xl font-bold text-center mb-2">East-West AI Platform</h1>
+      <p id="workspace-title" class="text-center text-gray-300 mb-12">My AI Workspace</p>
+
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8">
+        <!-- Assistant Card Images -->
+        <img src="images/zoe.jpg" alt="Zoe" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+        <img src="images/arlo.jpg" alt="Arlo" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+        <img src="images/lena.jpg" alt="Lena" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+        <img src="images/james.jpg" alt="James" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+        <img src="images/ethan.jpg" alt="Ethan" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+        <img src="images/aisha.jpg" alt="Aisha" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+        <img src="images/ava.jpg" alt="Ava" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+        <img src="images/leo.jpg" alt="Leo" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+        <img src="images/mia.jpg" alt="Mia" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+        <img src="images/sarah.jpg" alt="Sarah" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+        <img src="images/elsa.jpg" alt="Elsa" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+        <img src="images/lucas.jpg" alt="Lucas" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+        <img src="images/sophie.jpg" alt="Sophie" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+        <img src="images/isaac.jpg" alt="Isaac" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+        <img src="images/tyler.jpg" alt="Tyler" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+      </div>
+    </main>
+  </div>
+
+  <!-- Settings Panel -->
+  <div id="settings-panel" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+    <div class="bg-white text-black p-6 rounded-xl w-96 space-y-4">
+      <h2 class="text-xl font-bold">Settings</h2>
+      <label class="block">Your Name:
+        <input id="owner-name" class="w-full border p-2 rounded mt-1" placeholder="e.g. Stephen's Workspace">
+      </label>
+      <label class="block">Background Theme:
+        <select id="bg-color" class="w-full border p-2 rounded mt-1">
+          <option value="">Default (Slate)</option>
+          <option value="bg-gradient-to-br from-indigo-800 to-blue-900">Indigo Blue</option>
+          <option value="bg-gradient-to-br from-pink-700 to-red-900">Pink Red</option>
+          <option value="bg-gradient-to-br from-green-700 to-teal-900">Green Teal</option>
+        </select>
+      </label>
+      <label class="block">Language:
+        <select id="language" class="w-full border p-2 rounded mt-1">
+          <option value="en">English</option>
+          <option value="es">Spanish</option>
+          <option value="fr">French</option>
+          <option value="de">German</option>
+          <option value="it">Italian</option>
+          <option value="pt">Portuguese</option>
+          <option value="ru">Russian</option>
+          <option value="zh">Chinese</option>
+          <option value="ja">Japanese</option>
+          <option value="ko">Korean</option>
+          <option value="ar">Arabic</option>
+          <option value="hi">Hindi</option>
+        </select>
+      </label>
+      <div class="flex justify-end space-x-4">
+        <button onclick="closeSettings()" class="px-4 py-2 bg-gray-300 rounded hover:bg-gray-400">Cancel</button>
+        <button onclick="applySettings()" class="px-4 py-2 bg-violet-600 text-white rounded hover:bg-violet-700">Save</button>
+      </div>
+    </div>
+  </div>
+  <script>feather.replace();</script>
+</body>
+
+</html>
