--- a/index.html
+++ b/index.html
@@ -225,10 +225,10 @@
           <option value="hi">Hindi</option>
         </select>
       </label>
-      <div class="flex justify-end space-x-4">
-        <button onclick="closeSettings()" class="px-4 py-2 bg-gray-300 rounded hover:bg-gray-400">Cancel</button>
-        <button onclick="applySettings()" class="px-4 py-2 bg-violet-600 text-white rounded hover:bg-violet-700">Save</button>
-      </div>
+      <div class="flex justify-end space-x-2 pt-4">
+  <button id="cancel-button" onclick="closeSettings()" class="px-4 py-2 bg-gray-300 rounded hover:bg-gray-400">Cancel</button>
+  <button id="save-button" onclick="applySettings()" class="px-4 py-2 bg-violet-600 text-white rounded hover:bg-violet-700">Save</button>
+</div>
     </div>
   </div>
   <script>feather.replace();</script>
