--- a/settings.html
+++ b/settings.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Settings</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://unpkg.com/feather-icons"></script>
   <script>
     function openTab(tabId) {
       const tabs = document.querySelectorAll('.tab-content');
