--- a/settings.html
+++ b/settings.html
@@ -25,9 +25,10 @@
           <i data-feather="menu" class="cursor-pointer"></i>
         </div>
        <div class="flex flex-col space-y-6 mt-96">
-          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
+          <a href="index.html" class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
             <i data-feather="home"></i>
             <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Home</span>
+          </a>
           </div>
           <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
             <i data-feather="zap"></i>
