--- a/settings.html
+++ b/settings.html
@@ -16,7 +16,7 @@
     }
   </script>
 </head>
-<body class="min-h-screen flex bg-gradient-to-br from-indigo-800 to-blue-900 text-white">
+<body class="min-h-screen text-white" style="background-color: #8C8CCF;">
 
   <!-- Sidebar -->
 <aside class="w-20 text-white flex flex-col py-6 space-y-6 fixed top-0 left-0 h-full z-40 justify-between" style="background-color: #1F395C;">
